--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 .DS_Store
 .ipynb_checkpoints/ECOSAT3_Magnetometer-checkpoint.ipynb
 .ipynb_checkpoints/ECOSAT3_Gravimeter-checkpoint.ipynb
+in2018_v04_base_station.png
+in2018_v04_igrf.png
+in2018_v04_Magnetometer_Segments.png
