add wind direction plots

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 in2018_v04_base_station.png
 in2018_v04_igrf.png
 in2018_v04_Magnetometer_Segments.png
+.ipynb_checkpoints/underway_data_plots-checkpoint.ipynb
+.ipynb_checkpoints/DredgeSiteProcessing-checkpoint.ipynb
+.ipynb_checkpoints/DredgingTension-checkpoint.ipynb
